Fixed whitespace/line breaks

--- a/src/index.css
+++ b/src/index.css
@@ -48,11 +48,11 @@ main {
 
 .post__body p,
 .comment__body p {
+  overflow-wrap: break-word;
   white-space: pre-wrap;
   margin: 0;
   line-height: 1.6;
 }
-
 .post .media {
   margin-top: 10px;
 }
